8226284: [lworld][c1] TestJNICalls.java fails with -DVerifyVM=true

Reviewed-by: thartmann