src/hotspot/share/runtime/interfaceSupport.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -264,7 +264,7 @@ void InterfaceSupport::verify_stack() {
       // In case of exceptions we might not have a runtime_stub on
       // top of stack, hence, all callee-saved registers are not going
       // to be setup correctly, hence, we cannot do stack verify
-    if (cb != NULL && !(cb->is_runtime_stub() || cb->is_uncommon_trap_stub())) return;
+    if (cb != NULL && !cb->can_verify_stack()) return;
 
     for (; !sfs.is_done(); sfs.next()) {
       sfs.current()->verify(sfs.register_map());
